# OpenAPI.yaml
@@ -1,142 +1,253 @@
-openapi: 3.0.0
+openapi: 3.1.0
 info:
-  title: store
-  version: '1.0'
-  description: A simple store
-  contact:
-    name: Example Dev
-    url: 'https://www.example.com'
-    email: internal@example.com
-  termsOfService: 'https://www.example.com'
-  license:
-    name: Apache 2.0
-    url: 'https://www.apache.org/licenses/LICENSE-2.0.htm'
+  title: OpenAPI definition
+  version: v0
 servers:
-  - url: 'http://localhost:8080'
-    description: dev
+- url: http://localhost:8080
+  description: Generated server url
 paths:
-  /order:
-    get:
-      summary: Get Orders
-      tags:
-        - store
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Order'
-      operationId: getOrders
-      description: Get all orders
-    post:
-      summary: Create Order
-      tags:
-        - store
-      responses:
-        '201':
-          description: Created
-      operationId: createOrder
-      description: Create a new order
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                id:
-                  type: integer
-                  format: int64
-                descriptioon:
-                  type: string
-  /customer:
-    get:
-      summary: Get Customers
-      tags:
-        - store
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Customer'
-      operationId: getCustomers
-      description: Get all customers
-    post:
-      summary: Create Customer
-      tags:
-        - store
-      responses:
-        '201':
-          description: Created
-      operationId: createCustomer
-      description: Create a new customer
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                id:
-                  type: integer
-                  format: int64
-                name:
-                  type: string
   /products:
     get:
-      summary: Get Products
       tags:
-        - store
+      - product-controller
+      operationId: getAllProducts
+      parameters:
+      - name: cursor
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int64
+      - name: size
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 10
       responses:
-        '200':
+        "200":
           description: OK
           content:
-            application/json:
+            '*/*':
               schema:
-                type: object
-                properties:
-                  id:
-                    type: string
-                  description:
-                    type: string
-                  orders:
-                    type: array
-                    items:
-                      type: integer
-                      format: int64
-      operationId: getProducts
-      description: Get all products
+                $ref: "#/components/schemas/CursorPageResponseProductDTO"
     post:
-      summary: Create Product
       tags:
-        - store
-      responses:
-        '201':
-          description: Created
+      - product-controller
       operationId: createProduct
-      description: Create a new product
       requestBody:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                id:
-                  type: integer
-                  format: int64
-                description:
-                  type: string
-                  x-stoplight:
-                    id: jbh0jzkonppv8
+              $ref: "#/components/schemas/ProductRequest"
+        required: true
+      responses:
+        "201":
+          description: Created
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ProductDTO"
+  /order:
+    get:
+      tags:
+      - order-controller
+      operationId: getAllOrders
+      parameters:
+      - name: cursor
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int64
+      - name: size
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 10
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/CursorPageResponseOrderDTO"
+    post:
+      tags:
+      - order-controller
+      operationId: createOrder
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/OrderRequest"
+        required: true
+      responses:
+        "201":
+          description: Created
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/OrderDTO"
+  /order/{orderId}/products/{productId}:
+    post:
+      tags:
+      - order-controller
+      operationId: addProductToOrder
+      parameters:
+      - name: orderId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      - name: productId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/OrderDTO"
+  /customer:
+    get:
+      tags:
+      - customer-controller
+      operationId: getAllCustomers
+      parameters:
+      - name: page
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 0
+      - name: size
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 10
+      - name: query
+        in: query
+        required: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/CustomerDTO"
+    post:
+      tags:
+      - customer-controller
+      operationId: createCustomer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CustomerRequest"
+        required: true
+      responses:
+        "201":
+          description: Created
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/CustomerDTO"
+  /products/{id}:
+    get:
+      tags:
+      - product-controller
+      operationId: getProductById
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ProductDTO"
+  /order/{id}:
+    get:
+      tags:
+      - order-controller
+      operationId: getOrder
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/OrderDTO"
 components:
   schemas:
-    Order:
-      title: Order
+    ProductRequest:
+      type: object
+      properties:
+        description:
+          type: string
+    ProductDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        description:
+          type: string
+        orderIds:
+          type: array
+          items:
+            type: integer
+            format: int64
+    OrderRequest:
+      type: object
+      properties:
+        description:
+          type: string
+        customerId:
+          type: integer
+          format: int64
+        productIds:
+          type: array
+          items:
+            type: integer
+            format: int64
+    OrderCustomerDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+    OrderDTO:
       type: object
       properties:
         id:
@@ -145,15 +256,25 @@ components:
         description:
           type: string
         customer:
-          type: object
-          properties:
-            id:
-              type: integer
-              format: int64
-            description:
-              type: string
-    Customer:
-      title: Customer
+          $ref: "#/components/schemas/OrderCustomerDTO"
+        products:
+          type: array
+          items:
+            $ref: "#/components/schemas/ProductOrderDTO"
+    ProductOrderDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        description:
+          type: string
+    CustomerRequest:
+      type: object
+      properties:
+        name:
+          type: string
+    CustomerDTO:
       type: object
       properties:
         id:
@@ -164,15 +285,42 @@ components:
         orders:
           type: array
           items:
-            type: object
-            properties:
-              id:
-                type: integer
-                format: int64
-              description:
-                type: string
-                x-stoplight:
-                  id: mq08x82g95zl9
-tags:
-  - name: store
-    description: store operations
+            $ref: "#/components/schemas/CustomerOrderDTO"
+    CustomerOrderDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        description:
+          type: string
+    CursorPageResponseProductDTO:
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            $ref: "#/components/schemas/ProductDTO"
+        pageSize:
+          type: integer
+          format: int32
+        nextCursor:
+          type: integer
+          format: int64
+        hasNext:
+          type: boolean
+    CursorPageResponseOrderDTO:
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            $ref: "#/components/schemas/OrderDTO"
+        pageSize:
+          type: integer
+          format: int32
+        nextCursor:
+          type: integer
+          format: int64
+        hasNext:
+          type: boolean
